# social-media-downloader

./: .gitignore  README.md  build.py  build_dmg.py  convert_icon.py  create_default_icon.py  entry.py  pyproject.toml
.github/workflows/: build.yml
assets/: icon.icns
pyinstaller_hooks/: runtime_hook_pyqt5.py
src/: __init__.py  app.py  gui.py  main.py  ui.py
src/weibo/: __init__.py  downloader.py
src/xiaohongshu/: __init__.py  downloader.py
